// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders githubURL 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-primary"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
      />
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        href="https://github.com/sindresorhus/cows"
      >
        GitHub
      </a>
      <Icon
        icon="github"
        type="fab"
      />
    </div>
  </div>
</nav>
`;

exports[`renders title 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-primary"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
      >
        Super Cool Docs
      </a>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        href={undefined}
      >
        GitHub
      </a>
      <Icon
        icon="github"
        type="fab"
      />
    </div>
  </div>
</nav>
`;
